plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenCentral()
	maven { url 'https://maven.wispforest.io/releases' }
	maven { url 'https://jitpack.io/' }
	maven { url 'https://api.modrinth.com/maven' }
}

loom {
	mixin {
		useLegacyMixinAp = false
		defaultRefmapName = "sha-refmap.json"
	}

	mods {
		"sha" {
			sourceSet sourceSets.main
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"

	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	compileOnly files("C:/Users/males/AppData/Roaming/PrismLauncher/instances/26.1.2(1)/minecraft/mods/sodium-fabric-${project.sodium_version}.jar")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
	it.options.compilerArgs += ['--enable-preview']
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}
}

tasks.register('deploy', Copy) {
	doFirst {
		['endless', 'nost'].each { inst ->
			def modsDir = file("E:/SystemOffload/AppData/Roaming/ATLauncher/instances/${inst}/mods")
			if (modsDir.exists()) {
				modsDir.listFiles().each { f ->
					if (f.name.startsWith("sha-") && f.name.endsWith(".jar")) {
						f.delete()
					}
				}
			}
		}
	}
	from(layout.buildDirectory.dir("libs"))
	include("*.jar")
	exclude("*-sources.jar", "*-dev.jar", "*-sources-dev.jar")
	into("E:/SystemOffload/AppData/Roaming/ATLauncher/instances/endless/mods")
}

tasks.register('deployNost', Copy) {
    dependsOn jar, deploy
	from(layout.buildDirectory.dir("libs"))
	include("*.jar")
	exclude("*-sources.jar", "*-dev.jar", "*-sources-dev.jar")
	into("E:/SystemOffload/AppData/Roaming/ATLauncher/instances/nost/mods")
}

build.configure {
	finalizedBy(deploy, deployNost)
}
